code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Jul-2010 Ian MacLennan
 # [#21361] Contact Component (Category Contact List-No Query)
 # [#21553] "Add Site Name to Page Titles" does not work in Atom and RSS feeds
 # [#21559] Joomla! Form Field Checkboxes

28-Jul-2010 Jean-Marie Simonet
 # [#21605] small change in menu manager: new menu item. Thanks Bill.
 # [#21584] Robots metadata useless Option
 # [#21569] article categories - not showing no of articles in each category. Thanks Bill.
 # [#21589] Menu items - link,display and metadata all in one panel slider. Thanks Bill.
 $ Missing string

27-Jul-2010 Ian MacLennan
 # [#21578] mod_articles_popular Ordering Correction
 # [#21547] Make installation work with XHTML parsed as XML

27-Jul-2010 Jean-Marie Simonet
 # [#21159] Using Save as Copy in Categery - no indication is a copy
 # [#21596] Small typo in installer adapters. Thanks Viet.
 # [#21575] Bluestork com_modules module view Clear Float correction. Thanks Omar.

-------------------- 1.6.0 Beta6 Release [26-Jul-2010] ------------------

26-Jul-2010 Jean-Marie Simonet
 # [#21586] Implementing menu items title and image params
 # [#21458] css Error - Beez_50. Thanks Bill.
 # [#21546] plgEditorTinymce->_toogleButton is not well-formed. Thanks Franklin.
 # [#21585] Trashed menu items still in list

25-Jul-2010 Jean-Marie Simonet
 # [#20753] Bluestork Template For RTL languge
 # [#21564] Pagenavigation between articles does not work. Thanks Hannes.
 # [#21516] 'Disabled' state is not used in Content Languages view. Thanks CY Lee and Michael.
 $ [#21453] module - archived articles - label. Thanks Bill.
 # [#21294] Cells of "Date" columns is not in one line in com_content grids in IE. Thanks Artyom.
 # [#21524] Atom feed renderer reports wrong Joomla! version. Thanks Franklin.
 $ [#21479] menu alias string error. Thanks Bill.