@@ -1,4 +1,3 @@
-
 <?php
 /**
  * @version		$Id$
